--- a/manifest.json
+++ b/manifest.json
@@ -1,50 +1,25 @@
-﻿{
-  "name": "آزمون‌ساز حرفه‌ای AMIN QM",
-  "short_name": "AMIN QM",
-  "description": "ابزار قدرتمند ساخت آزمون‌های حرفه‌ای با هوش مصنوعی - نسخه 3.6.5",
-  "start_url": "/",
+{
+  "background_color": "#ffffff",
+  "dir": "ltr",
   "display": "standalone",
-  "background_color": "#1a237e",
-  "theme_color": "#1a237e",
-  "orientation": "portrait",
+  "name": "mhtabmjawry-web.github",
+  "orientation": "any",
   "scope": "/",
-  "lang": "fa",
-  "dir": "rtl",
+  "short_name": "mhtabmjawry-web.github",
+  "start_url": "/",
+  "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "https://via.placeholder.com/192x192/1a237e/ffffff?text=AMIN",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "https://via.placeholder.com/512x512/1a237e/ffffff?text=AMIN",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "categories": ["education", "productivity", "utilities"],
-  "shortcuts": [
-    {
-      "name": "ساخت آزمون جدید",
-      "short_name": "آزمون جدید",
-      "description": "شروع ساخت آزمون جدید",
-      "url": "/?new"
-    },
-    {
-      "name": "آزمون نمونه",
-      "short_name": "نمونه",
-      "description": "بارگذاری آزمون نمونه",
-      "url": "/?sample"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "https://via.placeholder.com/1280x720/1a237e/ffffff?text=AMIN+QM+App",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
+      "src": "data:image/svg+xml,&lt;svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\"&gt;&lt;text y=\".9em\" font-size=\"90\"&gt;📚&lt;/text&gt;&lt;/svg&gt;",
+      "type": "image/x-icon",
+      "isSquare": false,
+      "isPng": false,
+      "isWebp": false,
+      "isJpg": false,
+      "width": 0,
+      "is512x512": false,
+      "is256x256": false,
+      "is192x192": false
     }
   ]
 }
